completed form structure on single page

--- a/home.html
+++ b/home.html
@@ -61,15 +61,14 @@
     <input type="text" name="fullname" class="form-control" id="fullname" placeholder="Enter your name" maxlength="50" autofocus>
 </div>
 
+<div class="mb-3">
+    <label for="email" class="form-label">Email address: </label>
+    <input type="email" name="fullname" class="form-control" id="email" placeholder="Enter your email" maxlength="50">
+</div>
+<div class="col-12">
+    <button class="btn btn-primary" type="submit">Submit form</button>
+</div>
 
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                      </div>
-                      <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                      </div>
                     </form>
                 </div>
                 <div class="col-md-4">
